--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>3 screen app</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	 crossorigin="anonymous">
+
+
+	<style>
+		.content {
+			display: none;
+			margin: 1em;
+		}
+	</style>
+  <style>
        /* Set the size of the div element that contains the map */
       #map {
         height: 400px;  /* The height is 400 pixels */
         width: 100%;  /* The width is the width of the web page */
        }
     </style>
-  </head>
-  <body>
-    <h3>My Google Maps Demo</h3>
+
+</head>
+
+<body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">Menu</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#screen2">Map</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#screen3">Credits</a>
+      </li>
+    </ul>
+  </div>
+  </nav>
+  <div class="content" id="home">
+    Home page
+  </div>
+  <div class="content" id="screen2">
+    Display Google Maps Data. 
+    <body>
+    <h3>Rough visulization of crimes in this area:</h3>
     <!--The div element for the map -->
     <div id="map"></div>
 
@@ -25,7 +66,7 @@ function initMap() {
   var map = new google.maps.Map(
       document.getElementById('map'), {zoom: 11, center: chicago});
 
-  $.get("https://data.cityofchicago.org/resource/ijzp-q8t2.json?$limit=100",
+  $.get("https://data.cityofchicago.org/resource/ijzp-q8t2.json?$limit=20",
 
       function(response) {
         console.log("in data callback");
@@ -54,17 +95,7 @@ function initMap() {
     });
 
   }
-    var votes = [
-    { title: 'Apple', votes: 1 },
-    { title: 'Milk', votes: 2 },
-    { title: 'Carrot', votes: 3 },
-    { title: 'Banana', votes: 2 }
-  ];
 
-  votes.sort(function (vote1, vote2) {
-    console.log(vote1);
-    console.log(vote2);
-  });
 
 
     </script>
@@ -76,5 +107,33 @@ function initMap() {
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDa4dMSOASs_iLQnhrPoQ8EZgj2Im_pZ7o&callback=initMap">
     </script>
+  </body>
+  </div>
+  <div class="content" id="screen3">
+    Credits 
+  </div>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      
+
+    <script>
+      $(document).ready(function() {
+
+        function hideScreens() {
+          $(".content").hide();
+        }
+
+        $(".nav-link").on("click", function(){
+          hideScreens();
+          var target = $(this).attr("href");
+          $(target).show();
+        });
+
+      });
+    </script>
+
+
   </body>
 </html>
