meta tags theme and description added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Weather PWA">
   <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
+  <meta name="description" content="A chicago crime & weather app">
+  <meta name="theme-color" content="#309ee8" /> 
 
 
 	<style>
